[package]
name = "atomicflow-operator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.10"
intmax = { git = "https://github.com/de-dapp-lab/intmax-rollup-cli.git", rev = "25bdc752392088e0700d5bd472b4ed0bcfd857d1" }
intmax-rollup-interface = { git = "https://github.com/InternetMaximalism/intmax-rollup-interface", rev = "5d71b62" }
serde = { version = "1.0.153", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
plonky2 = { git = "https://github.com/mir-protocol/plonky2", rev = "d527073416dd8cbc04457b8cb856b2fec3fa0e6c" }
anyhow = "1.0.69"
dotenvy = "0.15.6"
dirs = "4.0.0"
axum-macros = "0.3.5"
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-native-tls", "chrono", "offline"] }
chrono = { version = "0.4.24", features = ["serde"] }
uuid = { version = "1.3.0", features = ["v4"] }
ethers = "2.0.1"
reqwest = "0.11.16"
futures = "0.3.28"
async-trait = "0.1.68"
thiserror = "1.0.40"

[features]
default = ["parallel", "tokio/rt-multi-thread"]
verbose = []
parallel = ["intmax-rollup-interface/parallel"]
wasm = []
